Backend/graphana/k8s/loki-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki
  namespace: cvalyze
spec:
  template:
    metadata:
      annotations:
        prometheus.io/port: "3100"
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
