Backend/graphana/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: cvalyze
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
