Backend/graphana/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: cvalyze
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.cvalyze.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
